--- a/frontend/src/css/pages/TravelDate.css
+++ b/frontend/src/css/pages/TravelDate.css
@@ -10,7 +10,7 @@
   padding-left: 1rem;
   font-size: max(1.6vw, 1.2rem);
   font-weight: bold;
-  color: #6b7280;
+  color: #333333;
   background-color: #efeff2;
   border: none;
   border-radius: 16px;
